# functional

./: .clang-format  .clangd  .codecov.yml  .fossa.yml  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .sonarcloud.properties  BUILD.bazel  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  MODULE.bazel  NIX.md  README.md  catch2_3.nix  conanfile.py  flake.nix  package.nix  sonar-project.properties  src
.github/: actionlint.yaml  dependabot.yml  zizmor.yml
.github/actions/build-ci-image/: action.yml
.github/actions/collect-pr-workspace/: action.yml
.github/actions/merge-ci-images/: action.yml
.github/actions/prepare-ci-image/: action.yml
.github/actions/resolve-sonar-project/: action.yml
.github/actions/restore-pr-workspace/: action.yml
.github/scripts/: validate-pr-artifact.sh
.github/workflows/: build.yml  ci-build.yml  ci-docs.yml  ci-pre-commit.yml  ci.yml  clang-format.yml  codecov-pr-scan.yml  codecov.yml  coverage.yml  docs.yml  licence.yml  license.yml  nix-build.yml  nix.yml  package-test-bazel.yml  package-test-conan.yml  package-test-nix.yml  package-test-vcpkg.yml  pre-commit.yml  sonarcloud-pr-scan.yml  sonarcloud.yml  test-package.yml
ci/: Dockerfile  build-catch.sh  fetch-bazel.sh  fetch-node.sh
ci/clang/: Dockerfile  fetch-clang.sh
ci/docs/: Dockerfile
ci/gcc/: Dockerfile
ci/pre-commit/: Dockerfile  requirements.txt
cmake/: Catch2.cmake  Ccache.cmake  CodeCoverage.cmake  CompilationOptions.cmake  Coverage.cmake  Docs.cmake  Doxygen.cmake  FindZnai.cmake  TargetGenerator.cmake  functionalConfig.cmake.in  libfnConfig.cmake.in
docs/: choice.md  ci.md  doxygen.json  footer.md  index.md  lookup-paths  meta.json  pack.md  sum.md  toc
docs/choice/: and_then.md  index.md  transform.md
docs/ci/: index.md
docs/expected/: and_then.md  discard.md  fail.md  filter.md  inspect.md  inspect_error.md  recover.md  transform_error.md  value_or.md
docs/optional/: and_then.md  discard.md  filter.md  inspect.md  inspect_error.md  or_else.md  transform_error.md  value_or.md
docs/pack/: index.md
docs/reference-manual/: and_then.md  api-reference.md  filter.md  or_else.md
docs/snippets/and_then/: choice_value.cpp  expected_error.cpp  expected_value.cpp  optional_error.cpp  optional_value.cpp
docs/snippets/filter/: expected_error.cpp  expected_value.cpp  optional_error.cpp  optional_value.cpp
docs/sum/: index.md
docs/templates/: snippet.md
examples/: CMakeLists.txt
examples/polygon/: CMakeLists.txt  main.cpp  polygon.hpp  test.cpp
examples/polygon/data/: README.md  huge.txt  long.txt  webster.txt  words.txt
examples/simple/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/fn/: and_then.hpp  choice.hpp  concepts.hpp  discard.hpp  expected.hpp  fail.hpp  filter.hpp  functional.hpp  functor.hpp  fwd.hpp  inspect.hpp  inspect_error.hpp  monadic.hpp  optional.hpp  or_else.hpp  pack.hpp  recover.hpp  sum.hpp  transform.hpp  transform_error.hpp  utility.hpp  value_or.hpp
include/fn/detail/: functional.hpp  fwd.hpp  fwd_macro.hpp  macro_deduced_return.hpp  macro_fwd.hpp  meta.hpp  monadic.hpp  pack_impl.hpp  traits.hpp  variadic_union.hpp
include/functional/: and_then.hpp  choice.hpp  concepts.hpp  expected.hpp  fail.hpp  filter.hpp  functional.hpp  functor.hpp  fwd.hpp  inspect.hpp  inspect_error.hpp  mainpage.hpp  optional.hpp  or_else.hpp  pack.hpp  recover.hpp  sum.hpp  transform.hpp  transform_error.hpp  utility.hpp  value_or.hpp
include/functional/detail/: closure.hpp  concepts.hpp  functional.hpp  meta.hpp  not_tuple.hpp  pack.hpp  pack_impl.hpp  sum_storage.hpp  traits.hpp  variadic_union.hpp
include/pfn/: expected.hpp  functional.hpp  optional.hpp  utility.hpp
nix/: README.md  catch2_3.nix  package.nix
ports/libfn/: portfile.cmake  usage  vcpkg.json
scripts/: sync_vcpkg_version.py  sync_versions.py
test_package/: .clangd  BUILD.bazel  CMakeLists.txt  MODULE.bazel  conanfile.py  consumer.nix  flake.nix
test_package/src/: fn_quine.cpp  main.cpp  pfn_quine.cpp
tests/: CMakeLists.txt  catch2
tests/examples/: CMakeLists.txt  dummy.cpp  simple.cpp
tests/examples/polygon/: main.cpp
tests/examples/simple/: main.cpp
tests/fn/: and_then.cpp  choice.cpp  concepts.cpp  discard.cpp  expected.cpp  expected_polyfill.cpp  fail.cpp  filter.cpp  functional.cpp  functor.cpp  inspect.cpp  inspect_error.cpp  optional.cpp  or_else.cpp  pack.cpp  recover.cpp  sum.cpp  transform.cpp  transform_error.cpp  utility.cpp  value_or.cpp
tests/fn/detail/: functional.cpp  fwd_macro.cpp  macro_deduced_return.cpp  macro_fwd.cpp  meta.cpp  pack_impl.cpp  traits.cpp  variadic_union.cpp
tests/main/: CMakeLists.txt  main.cpp
tests/pfn/: expected.cpp  expected_validation.cpp  functional.cpp  optional.cpp  optional_validation.cpp  utility.cpp
tests/tests/: CMakeLists.txt  and_then.cpp  choice.cpp  concepts.cpp  dummy.cpp  expected.cpp  fail.cpp  filter.cpp  functional.cpp  functor.cpp  inspect.cpp  inspect_error.cpp  optional.cpp  or_else.cpp  pack.cpp  recover.cpp  sum.cpp  sum_1.cpp  sum_2.cpp  sum_3.cpp  transform.cpp  transform_error.cpp  utility.cpp  value_or.cpp
tests/tests/detail/: fwd_macro.cpp  meta.cpp  not_tuple.cpp  sum_storage.cpp  traits.cpp  variadic_union.cpp
tests/util/: CMakeLists.txt  helper_types.hpp  static_check.hpp
