package(default_visibility = ["//visibility:public"])

# C++20-compatible polyfills; always available.
cc_library(
    name = "pfn",
    hdrs = glob(["include/pfn/**/*.hpp"]),
    includes = ["include"],
)

# C++23 library. Consumers that want a C++20-only build (the conan disable_cxx23
# option / vcpkg disable-cxx23 feature equivalent) simply do not depend on this.
cc_library(
    name = "fn",
    hdrs = glob(["include/fn/**/*.hpp"]),
    includes = ["include"],
    deps = [":pfn"],
)
